--- a/ABM.Paie/Layout/MainHeader.razor
+++ b/ABM.Paie/Layout/MainHeader.razor
@@ -1,56 +1,74 @@
 ﻿<div>
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true">
 		<ActivatorContent>
-			<MudButton Variant="Variant.Text" Href=""><MudText>Accueil</MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" Href=""><MudText>Accueil</MudText></MudButton>
 		</ActivatorContent>
 	</MudMenu>
 	
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
 		<ActivatorContent>
-			<MudButton Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Formations</MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Formations</MudText></MudButton>
 		</ActivatorContent>
 		<ChildContent>
+			<MudMenuItem>Catalogue en ligne</MudMenuItem>
 			<MudMenuItem>Initiale</MudMenuItem>
-			<MudMenuItem>Perfectionnements</MudMenuItem>
+			<MudMenuItem>Perfectionnement</MudMenuItem>
+			<MudMenuItem>Paramétrages avancés</MudMenuItem>
+		</ChildContent>
+	</MudMenu>
+
+	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
+		<ActivatorContent>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Actualités</MudText></MudButton>
+		</ActivatorContent>
+		<ChildContent>
+			<MudMenuItem>Actualités, nouveautés et mises-à-jour</MudMenuItem>
 		</ChildContent>
 	</MudMenu>
 	
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
 		<ActivatorContent>
-			<MudButton Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText><b>ABM PAIE</b></MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText><b>ABM Paie</b></MudText></MudButton>
 		</ActivatorContent>
 		<ChildContent>
-			<MudMenuItem>Référente pédagogique</MudMenuItem>
-			<MudMenuItem>Référente Handicap</MudMenuItem>
-			<MudMenuItem>Indicateurs formation</MudMenuItem>
+			<MudMenuItem>Organigramme</MudMenuItem>
+			<MudMenuItem>Équipe pédagogique</MudMenuItem>
+			<MudMenuItem>Référente Assistance technique et pédagogique</MudMenuItem>
+			<MudMenuItem>Référente handicap</MudMenuItem>
+			<MudMenuItem>Les indicateurs formation</MudMenuItem>
 			<MudMenuItem>Mes valeurs</MudMenuItem>
-			<MudMenuItem>Actualités</MudMenuItem>
 		</ChildContent>
 	</MudMenu>
 	
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
 		<ActivatorContent>
-			<MudButton Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Expérience</MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Expérience</MudText></MudButton>
 		</ActivatorContent>
 		<ChildContent>
+			<MudMenuItem Href="Resources/pdfs/ABMq_CV.pdf" Target="_blank">Curriculum vitae</MudMenuItem>
 			<MudMenuItem>Salariée Silae</MudMenuItem>
 			<MudMenuItem>Formatrice Silae en chiffres</MudMenuItem>
-			<MudMenuItem>Étudiante Cafel</MudMenuItem>
+			<MudMenuItem>Étudiante CAFEL</MudMenuItem>
 		</ChildContent>
 	</MudMenu>
-	
-	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true">
+
+	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
 		<ActivatorContent>
-			<MudButton Class="indigo lighten-2 white-text" Variant="Variant.Filled"><MudText>Contact</MudText></MudButton>
+			<MudButton Class="indigo lighten-2 white-text" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Contact</MudText></MudButton>
 		</ActivatorContent>
+		<ChildContent>
+			<MudMenuItem>Prise de rendez-vous</MudMenuItem>
+			<MudMenuItem>Coordonnées (contact)</MudMenuItem>
+			<MudMenuItem>Mes pages officielles</MudMenuItem>
+		</ChildContent>
 	</MudMenu>
 	
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true" ActivationEvent="@MouseEvent.MouseOver">
 		<ActivatorContent>
-			<MudButton Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText><b>Partenariat</b></MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText><b>Partenariats</b></MudText></MudButton>
 		</ActivatorContent>
 		<ChildContent>
-			<MudMenuItem>Facilae Paie</MudMenuItem>
+			<MudMenuItem Href="https://www.facilaepaie.com" Target="_blank">Facilae Paie</MudMenuItem>
 		</ChildContent>
 	</MudMenu>
 </div>
