--- a/ABM.Paie/Layout/MainHeader.razor
+++ b/ABM.Paie/Layout/MainHeader.razor
@@ -1,7 +1,7 @@
 ﻿<div>
 	<MudMenu AnchorOrigin="Origin.BottomLeft" Dense="true">
 		<ActivatorContent>
-			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" Href=""><MudText>Accueil</MudText></MudButton>
+			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" Href="/"><MudText>Accueil</MudText></MudButton>
 		</ActivatorContent>
 	</MudMenu>
 	
@@ -45,7 +45,7 @@
 			<MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text" EndIcon="@Icons.Material.Filled.KeyboardArrowDown"><MudText>Expérience</MudText></MudButton>
 		</ActivatorContent>
 		<ChildContent>
-			<MudMenuItem Href="Resources/pdfs/ABMq_CV.pdf" Target="_blank">Curriculum vitae</MudMenuItem>
+			<MudMenuItem Href="resources/ABMq_CV.pdf" Target="_blank">Curriculum vitae</MudMenuItem>
 			<MudMenuItem>Salariée Silae</MudMenuItem>
 			<MudMenuItem>Formatrice Silae en chiffres</MudMenuItem>
 			<MudMenuItem>Étudiante CAFEL</MudMenuItem>
