feat: ABM Paie tab

--- a/ABM.Paie/Layout/MainFooter.razor
+++ b/ABM.Paie/Layout/MainFooter.razor
@@ -29,35 +29,49 @@
 	<div style="padding:20px;width:400px;">
 		<MudButton Class="white-text" Variant="Variant.Text" Href="">
 			<MudText Typo="Typo.h5">
+				<b>Actualités</b>
+			</MudText>
+		</MudButton>
+
+		<br />
+
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/ABM-Paie" Style="margin:40px 0px 0px 0px;">
+			<MudText Typo="Typo.h5">
 				<b>ABM Paie</b>
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/ABM-Paie/Organigramme" Style="padding:0px 8px">
+			<MudText>
+				Organigramme
+			</MudText>
+		</MudButton>
+		<br />
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/ABM-Paie/Equipe" Style="padding:0px 8px">
+			<MudText>
+				Équipe pédagogique
+			</MudText>
+		</MudButton>
+		<br />
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/ABM-Paie/Indicateurs" Style="padding:0px 8px">
 			<MudText>
 				Les indicateurs formation
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="white-text" Variant="Variant.Text" Href="/ABM-Paie/Valeurs" Style="padding:0px 8px">
 			<MudText>
 				Mes valeurs
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="white-text" Variant="Variant.Text" Href="" Style="padding:0px 8px">
-			<MudText>
-				Les actualités
-			</MudText>
-		</MudButton>
-		<br />
-		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="/ABM-Paie/Assistance" Style="padding:0px 8px">
 			<MudText>
 				<b>Référente Assistance technique et pédagogie</b>
 			</MudText>
 		</MudButton>
 		<br />
-		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="" Style="padding:0px 8px">
+		<MudButton Class="pink-text text-darken-4" Variant="Variant.Text" Href="/ABM-Paie/Handicap" Style="padding:0px 8px">
 			<MudText>
 				<b>Référente Handicap</b>
 			</MudText>
@@ -119,9 +133,9 @@
 		</MudButton>
 		<br />
 		<div class="d-flex align-center">
-			<MudIcon Icon="@Icons.Material.TwoTone.Phone" Title="Phone" Size="Size.Small" Style="margin:0px 0px 0px 8px;" />
-			<MudIcon Icon="@Icons.Material.TwoTone.Textsms" Size="Size.Small" Style="margin:0px 0px 0px 8px;" />
-			<img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 8px;" />
+			<MudIcon Icon="@Icons.Material.TwoTone.Phone" Title="Phone" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
+			<MudIcon Icon="@Icons.Material.TwoTone.Textsms" Size="Size.Small" Style="margin:0px 0px 0px 5px;" />
+			<img src="/images/whatsapp/Digital_Glyph_White.png" alt="WhatsApp" height="18" style="margin:0px 0px 0px 6.5px;" />
 			<MudText Class="white-text" Style="margin:0px 0px 0px 8px;">
 				+33 7 48 10 65 39
 			</MudText>
