--- a/ABM.Paie/Layout/MainLayout.razor
+++ b/ABM.Paie/Layout/MainLayout.razor
@@ -11,9 +11,11 @@
 
 	@Body
 	
-	<MudPaper class="center indigo lighten-2 white-text" Style="margin-bottom:20px;">
+	<MudPaper class="center indigo lighten-2 white-text" Style="margin-bottom:10px;">
 		<MainFooter />
 	</MudPaper>
+
+	<MudText Class="indigo-text" Style="text-align:right;margin:0 0 10px 0;">version : 202412.0</MudText>
 
 	<MudScrollToTop>
 		<MudFab Class="indigo lighten-2 white-text" StartIcon="@Icons.Material.Filled.ArrowCircleUp" />
